--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -54,6 +54,7 @@
     "promise": "7.1.1",
     "react-dev-utils": "^3.0.1",
     "react-error-overlay": "^1.0.8",
+    "script-loader": "0.7.2",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.3",
     "url-loader": "0.5.9",
